[package]
name = "havenlyPro"
version = "1.85.0"
edition = "2024"

[workspace]
members = ["lib/collection"]

[workspace.dependencies]
validator = { version = "0.18.1", features = ["derive"] }
serde_json = "1.0.140"
actix-web-validator = "6.0.0"
log = "0.4.26"
diesel = { version = "2.2.8", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1.37.1", features = [
    "serde",
    "serde-with-str",
    "diesel",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.40", features = ["serde"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-validator = "6.0.0"
diesel = { workspace = true }
dotenvy = "0.15.7"
env_logger = "0.11.7"
serde_json = "1.0.140"
validator.workspace = true
actix-jwt-auth-middleware = "0.5.0"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = "2.1.1"

collection = { path = "lib/collection" }
api = { path = "lib/api" }
