[package]
name = "havenlyPro"
version = "1.85.0"
edition = "2024"

[workspace]
members = ["lib/collection", "lib/api", "notification_worker"]

[dependencies.api]
path = "lib/api"

[dependencies.collection]
path = "lib/collection"

[dependencies.notification_worker]
path = "notification_worker"

[workspace.dependencies]
validator = { version = "0.18.1", features = ["derive"] }
serde_json = "1.0.140"
actix-web-validator = "6.0.0"
log = "0.4.26"
diesel = { version = "2.2.8", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1.37.1", features = [
    "serde",
    "serde-with-str",
    "diesel",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.40", features = ["serde"] }
lapin = "2.5.3"
lettre = "0.11.15"
redis = { version = "0.29.5", features = ["tokio-comp"] }
rand = "0.9.1"
dotenvy = "0.15.7"
tokio = "1.44.2"
futures-lite = "2.6.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-validator = "6.0.0"
diesel = { workspace = true }
dotenvy = { workspace = true }
env_logger = "0.11.7"
serde_json = "1.0.140"
validator.workspace = true
actix-jwt-auth-middleware = "0.5.0"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = "2.1.1"
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = "0.5.0"
actix-governor = "0.8.0"
