[package]
name = "notification_worker"
version = "1.85.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
lapin = { workspace = true }
lettre = { workspace = true }
redis = { workspace = true }
rand = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-lite = { workspace = true }
